--- a/index.html
+++ b/index.html
@@ -17,20 +17,14 @@
     </head>
 <body>
 
-	<marquee behavior="scroll" direction="left">
+	<!--<marquee behavior="scroll" direction="left">
     <p> Improve my coding skills. Hope, this page will be updated soon. </p>
-  	</marquee>
+  	</marquee>-->
     <div class="container">
   		<div class="row">
 			<div class="col align-items-center text-center">
         <div class="center p">
-          <br>
-				<br>
-				<br>
-				 <p> I'm a designer and web-developer living in Saint-Petersburg. Making visual identities in digital and print.
-					You can check out my <a href="https://kmpvd.gq/portfolio">portfolio</a> and contact via <a href="mailto:contact@kmpvd.gq?Subject=Let's%20create%20something">e-mail</a>
-					in case you’re interested in creating
-					something together.
+				 <p> kekre.ga?
                  </p>                 
     		</div>
       </div>
