--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   		<div class="row">
 			<div class="col align-items-center text-center">
         <div class="center p">
-				 <p> kekre.ga?
+				 <p> kekere.ga?
                  </p>                 
     		</div>
       </div>
